1998-04-24  Samuel Tardieu  <sam@inf.enst.fr>

	* 5pgtplsp.ads: Use the same file as SunOS but do not use Poll.

1998-04-22  Samuel Tardieu  <sam@inf.enst.fr>

	* 5pgtplsp.ads: Change casing for imported WSAStartup.

	* 5wgtplsp.ads: Likewise.

1998-04-20  Samuel Tardieu  <sam@inf.enst.fr>

	* s-ganobl.adb: Get Use_Poll from s-gtplsp.ads instead of
	s-garthi.ads.

	* s-garthi.ads: Move Use_Poll from here to s-gtplsp.ads when the
	platform uses the non-blocking alternative.

	* 5?gtplsp.ads: Define Use_Poll when needed.

	* 5wgtplsp.ads: Add a pragma Elaborate_Body to force body
	elaboration.

	* 5wgtplsp.adb: Windows NT specific package body.

	* Makefile.am (s-gtplsp.o): Specific trick needed to compile under 
	Windows NT.

1998-04-20  Laurent Pautet  <pautet@scapin.enst.fr>

	* 5lgarthi.ads, 5wgarthi.ads: Add Select sys call. Add a constant
 	Use_Poll which should be set to false if "select" is prefered to
 	"poll".

	* s-ganobl.adb: Add implementation using "select". This
        implementation is activated when Use_Poll is false.

	* Makefile.am, Makefile.in: Update dependencies.
	
1998-04-16  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-garopt.ads: Add Checksum variable.

	* s-gartyp.ads: Add a new type Word (checksum).

	* s-garopt.adb: Use String_Access from System.Garlic.Types rather
	than the one from GNAT.OS_Lib.

1998-04-09  Samuel Tardieu  <sam@inf.enst.fr>

	* Makefile.am: Use the target specific System.Garlic.Thin or the
	generic one if there is no specialization.

	* s-garthi.ads: Renamed into 5lgarthi.ads.

	* 5wgarthi.ads: Windows NT specific file, provided by Pascal Obry.

1998-04-07  Samuel Tardieu  <sam@inf.enst.fr>

	* 5wgtplsp.ads: Add Winsock initialization provided by Pascal Obry.

1998-04-05  Samuel Tardieu  <sam@inf.enst.fr>

	* 5wgarcon.ads: Install new version from Pascal Obry corresponding 
	to mingwin32.

1998-04-02  Samuel Tardieu  <sam@inf.enst.fr>

	* Makefile.am (inlining): Use a form that is less likely to make